<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WarungMak</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_iki_splash">IkiSplash</string>
    <string name="title_activity_pemesanan_makanan">PemesananMakanan</string>
    <string name="title_activity_kritik_saran">KritikSaran</string>
    <string name="image">image</string>
    <string name="title_activity_daftar_makanan">DaftarMakanan</string>
    <string name="title_activity_daftar_minuman">DaftarMinuman</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_alamat">Alamat</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_about">About</string>
    <string name="kritiksaran">Keluhan dan komplain Warung Makan Mak bisa anda sampaikan
	    disini atau hubungi Customer Service 081915160170 pukul 07.00 - 15.00 WIB</string>
    <string name="esteh">Es Teh\nHarga: Rp. 2000,-</string>
    <string name="esmarimas">Es Marimas\nHarga: Rp. 1500,-</string>
    <string name="esmilo">Es Milo\nHarga: Rp. 2000,-</string>
    <string name="essusu">Es Susu\nHarga: Rp. 2500,-</string>
    <string name="tehanget">Teh Hangat\nHarga: Rp. 1500,-</string>
    <string name="pecel">Nasi Pecel\nHarga: Rp. 2500,-</string>
    <string name="bening">Nasi Sop/Bening\nHarga: Rp. 2500,-</string>
    <string name="rames">Nasi Rames\nHarga: Rp. 2500,-</string>
    <string name="kangkung">Nasi Kangkung\nHarga: Rp. 2500,-</string>
    <string name="gorengan">Aneka Gorengan\nHarga: Rp. 500,-</string>
    <string name="tigan">Tigan Dadar\nHarga: Rp. 2500,-</string>
    <string name="warung">Warung Makan Mak\nBuka: 07.00-15.00 WIB</string>
    <string name="order">Untuk Pemesanan Tulis</string>
    <string name="title_activity_menu_favorit">MenuFavorit</string>
    <string name="title_activity_help">Help</string>
    
    <string name="help1">1. Untuk melihat daftar makanan dan minuman masuk ke menu Daftar Makanan dan Minuman</string>
    <string name="help2">2. Untuk memesan makanan masuk ke menu Pemesanan Makanan</string>
    <string name="help3">3. Untuk berbagai keluhan tentang pelayanan masuk ke menu Keluhan Konsumen</string>
    <string name="help4">4. Untuk voting makanan favorit masuk ke menu Makanan Favorit</string>
    <string name="help5">5. Menu Alamat WM untuk melihat alamat warung makan mak</string>

</resources>
